--- a/presupuestador/package.json
+++ b/presupuestador/package.json
@@ -11,8 +11,7 @@
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.3.2",
-    "sweetalert2": "^11.4.17",
-    "sweetalert2-react-content": "^5.0.0",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
